@@ -1,4 +1,4 @@
-rev 13-Mar_06-16_22
+rev 13-Mar_07-23_15
 
 6 June
 Upgraded from FCKeditor 2.4.1 to 2.6.6.  2.6.6 includes the scayt spellchecker, which is an in-editor spellchecker.
@@ -147,3 +147,6 @@ Synched edit.php with github.
 Check for files and/or directories in userfiles that have not been created into the
 links to media or have been converted to directories (Weatherwas). If found
 delete them so that the links can be created.
+
+7 Mar
+Fix for XPATH/httRequest in fckxml.js
